--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="flip_card_inner">
         <!-- card front -->
         <div class="flip_card_front">
-            <img src="./asset/img/influencer.png">
+            <img src="asset/img/influencer.png">
         </div>
         <!-- card back -->
         <div class="flip_card_back">
